# rs-stock-portfolio

./: Cargo.toml
migrations/2020-03-15-011206_create_posts/: up.sql
migrations/2020-03-19-033458_create_people/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/binaries/: delete_post.rs  handlers.rs  publish.rs  show_posts.rs  write_post.rs
